--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </div>
 👇ဒေါင်းယူရန်👇
 <div class="offcanvas-body small">
- <a "http://zza2024.duckdns.org/apk-file/ZZA-VIP-MAX_1.1.apk" style="margin-top: 20px;" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
+ <a "https://www.mediafire.com/file/mrttysb6ljhmw2g/ZZA-VIP-MAX_1.1.apk/file" style="margin-top: 20px;" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
   </div>
-  <a href="https://www.mediafire.com/file/mrttysb6ljhmw2g/ZZA-VIP-MAX_1.1.apk/file" style="margin-top: 20px;" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
+  <a href="http://zzaweb.duckdns.org/ZZA-VIP-MAX.apk" style="margin-top: 20px;" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
   </html>
